--- a/app/_config.yml
+++ b/app/_config.yml
@@ -1,5 +1,6 @@
 # Build settings
-destination: ../builds/dev
+destination: ../builds/dev/docs
+baseurl: "/docs" # the subpath of your site, e.g. /blog
 exclude: ['css', '_scss', '_sass', 'assets/js/header.js','assets/js/slide.js', '.htaccess~']
 permalink: pretty
 markdown: kramdown
@@ -14,9 +15,8 @@ email: osc@harvard.edu
 phone: +1 (617) 495 4089
 fax: +1 (617) 495 0370
 description: > # this means to ignore newlines until "baseurl colon"
-  PLACEHOLDER TEXT
+  A central, open-access repository of research by members of the Harvard community.
 
-baseurl: "/static/dash-jekyll" # the subpath of your site, e.g. /blog
 url: "https://dash.harvard.edu" # the base hostname & protocol for your site
 twitter_url: https://twitter.com/oscharvard
 facebook_url: https://www.facebook.com/pages/Harvard-Library-Office-for-Scholarly-Communication/109048279146780
