--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "grunt-contrib-uglify": "^0.9.1",
     "grunt-exec": "^0.4.6",
     "grunt-html": "^5.0.1",
+    "grunt-if": "^0.1.5",
     "grunt-link-checker": "^0.1.0",
     "grunt-newer": "^1.1.1",
     "grunt-purifycss": "^0.1.0",
