--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,9 @@
 {
-  "name": "copyright-jekyll",
+  "name": "dash-docs",
   "authors": [
     "Harvard Library OSC <osc@harvard.edu>"
   ],
-  "description": "Harvard Library Office for Scholarly Communication's Copyright site, build and deploy",
+  "description": "Harvard Library Office for Scholarly Communication's static DASH pages, build and deploy",
   "license": "MIT",
   "ignore": [
     "**/.*",
