--- a/gemfile
+++ b/gemfile
@@ -1,2 +1,4 @@
+source "https://rubygems.org"
+gem 'jekyll', '~>3.0.0'
 gem 'jekyll-sitemap'
-gem 'jekyll-redirect-from'
+gem 'jekyll-redirect-from', '>=0.9.0'
